# stargate-grpc-rust-client

./: Cargo.toml  README.md  README.md.skt.md
examples/: basic.rs  batch.rs  chrono.rs  config.rs  connect.rs  keyspace.rs  query.rs  simple_query.rs  uuid.rs
src/: client.rs  error.rs  from_value.rs  into_value.rs  lib.rs  query.rs  result.rs  types.rs
stargate-grpc/: Cargo.toml  README.md  README.md.skt.md  build.rs
stargate-grpc-derive/: Cargo.toml  README.md  README.md.skt.md  build.rs
stargate-grpc-derive/examples/: udt.rs
stargate-grpc-derive/src/: lib.rs
stargate-grpc-derive/tests/: readme.rs
stargate-grpc/examples/: batch.rs  chrono.rs  config.rs  connect.rs  keyspace.rs  query.rs  udt.rs  uuid.rs
stargate-grpc/src/: client.rs  error.rs  from_value.rs  into_value.rs  lib.rs  query.rs  result.rs  types.rs
stargate-grpc/tests/: derive.rs
