[package]
name = "stargate-grpc"
description = "gRPC client for DataStax Stargate"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
bytes = "1.1.0"
itertools = "0.10.1"
prost = "0.8"
prost-types = "0.8"
tokio = { version = "1.12.0", features = ["full"] }
tonic = "0.5.2"

[build-dependencies]
tonic-build = "0.5.2"
