[package]
name = "stargate-grpc"
description = "gRPC client for Stargate"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1"
itertools = "0.10"
prost = "0.8"
prost-types = "0.8"
tokio-rustls = "0.22"
tonic = { version = "0.5", features = ["transport", "tls"] }
webpki-roots = "0.21"

chrono = { version = "0.4", optional = true }
uuid = { version = "0.8", optional = true }

[dev-dependencies]
anyhow = "1.0.44"
chrono = "0.4.19"
clap = "3.0.0-beta.4"
clap_derive = "3.0.0-beta.4"
tokio = { version = "^1.12.0", features = ["rt-multi-thread"] }
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
tonic-build = "0.5.2"

[[example]]
name = "uuid"
required-features = ["uuid"]

[[example]]
name = "chrono"
required-features = ["chrono"]
