[package]
name = "stargate-grpc-derive"
description = "Struct mapper for stargate-grpc"
version = "0.1.1"
edition = "2018"
categories = ["api-bindings", "database"]
keywords = ["grpc", "stargate", "cassandra"]
homepage = "https://github.com/stargate/stargate-grpc-rust-client"
repository = "https://github.com/stargate/stargate-grpc-rust-client"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
darling = "0.13"
proc-macro2 = "1.0"
quote = "1.0.10"
syn = "1.0"

[dev-dependencies]
stargate-grpc = { path = "../stargate-grpc" }
