[package]
name = "stargate-grpc"
description = "gRPC client for Stargate"
version = "0.4.0"
edition = "2018"
homepage = "https://github.com/stargate/stargate-grpc-rust-client"
repository = "https://github.com/stargate/stargate-grpc-rust-client"
categories = ["api-bindings", "database"]
keywords = ["grpc", "stargate", "cassandra"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
bytes = "1.1"
itertools = "0.10"
num-traits = "0.2"
prost = "0.8"
prost-types = "0.8"
rustls-native-certs = "0.5.0"
streaming-iterator = "0.1.5"
tokio-rustls = "0.22"
tonic = { version = "0.5", features = ["transport", "tls"] }

chrono = { version = "0.4", optional = true }
uuid = { version = "0.8", optional = true }
stargate-grpc-derive = { version = "0.2", path = "../stargate-grpc-derive", optional = true }

[dev-dependencies]
anyhow = "1.0.44"
chrono = "0.4.19"
clap = "=3.0.0-beta.5"
clap_derive = "=3.0.0-beta.5"
skeptic = "0.13"
tokio = { version = "^1.12.0", features = ["rt-multi-thread"] }
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
skeptic = "0.13"
tonic-build = "0.5.2"

[features]
macros = ["stargate-grpc-derive"]

[[example]]
name = "uuid"
required-features = ["uuid"]

[[example]]
name = "chrono"
required-features = ["chrono"]

[[example]]
name = "udt"
required-features = ["macros"]

